# project1

./: Dashboard.html  DataPage.html  SignUp.html  app.py  aquarius.html  aries.html  cancer.html  capricorn.html  chat.css  chat.html  chat.js  chat.py  client.py  dashboard.css  gemini.html  index.html  leo.html  libra.html  main.py  pisces.html  pyproject.toml  sagittarius.html  scorpio.html  sign up page.css  style.css  taurus.html  test.html  test2.html  test3.html  virgo.html
