[tool.poetry]
name = "powerlessblindinstances"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-wtf = "1.2.1"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
werkzeug = "^3.0.2"
wtforms = "^3.1.2"
flask = "^3.0.3"
jinja2 = "3.1.3"
sqlalchemy = "^2.0.30"
flask-socketio = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
